tests/snapshots/fixtures__imdb_movie_info_smoke_plan.snap
---
source: tests/tests/fixtures.rs
expression: contents
---
[
    QueryPlan {
        root: TableId(
            13,
        ),
        output_name: "movie_info",
        clauses: SelectionClauses {
            filter: Some(
                Binary {
                    left: Column(
                        ColumnId(
                            63,
                        ),
                    ),
                    op: Gt,
                    right: Literal(
                        Number(
                            "0",
                        ),
                    ),
                },
            ),
            order_by: [
                OrderByPlan {
                    column: ColumnId(
                        63,
                    ),
                    direction: Asc,
                },
            ],
            limit: Some(
                2,
            ),
            offset: None,
        },
        selections: SelectionPlan {
            table: TableId(
                13,
            ),
            clauses: SelectionClauses {
                filter: Some(
                    Binary {
                        left: Column(
                            ColumnId(
                                63,
                            ),
                        ),
                        op: Gt,
                        right: Literal(
                            Number(
                                "0",
                            ),
                        ),
                    },
                ),
                order_by: [
                    OrderByPlan {
                        column: ColumnId(
                            63,
                        ),
                        direction: Asc,
                    },
                ],
                limit: Some(
                    2,
                ),
                offset: None,
            },
            items: [
                Projection(
                    Projection {
                        column: ColumnId(
                            63,
                        ),
                        output_name: "id",
                    },
                ),
                Projection(
                    Projection {
                        column: ColumnId(
                            66,
                        ),
                        output_name: "info",
                    },
                ),
                Projection(
                    Projection {
                        column: ColumnId(
                            67,
                        ),
                        output_name: "note",
                    },
                ),
                Relation(
                    NestedRelation {
                        relation_name: "title",
                        output_name: "title",
                        table: TableId(
                            20,
                        ),
                        foreign_key: ForeignKeyId(
                            14,
                        ),
                        selections: SelectionPlan {
                            table: TableId(
                                20,
                            ),
                            clauses: SelectionClauses {
                                filter: Some(
                                    Binary {
                                        left: Column(
                                            ColumnId(
                                                105,
                                            ),
                                        ),
                                        op: Eq,
                                        right: Literal(
                                            Number(
                                                "100",
                                            ),
                                        ),
                                    },
                                ),
                                order_by: [],
                                limit: None,
                                offset: None,
                            },
                            items: [
                                Projection(
                                    Projection {
                                        column: ColumnId(
                                            97,
                                        ),
                                        output_name: "title",
                                    },
                                ),
                            ],
                        },
                    },
                ),
                Relation(
                    NestedRelation {
                        relation_name: "info_type",
                        output_name: "info_type",
                        table: TableId(
                            8,
                        ),
                        foreign_key: ForeignKeyId(
                            15,
                        ),
                        selections: SelectionPlan {
                            table: TableId(
                                8,
                            ),
                            clauses: SelectionClauses {
                                filter: None,
                                order_by: [],
                                limit: None,
                                offset: None,
                            },
                            items: [
                                Projection(
                                    Projection {
                                        column: ColumnId(
                                            50,
                                        ),
                                        output_name: "info",
                                    },
                                ),
                            ],
                        },
                    },
                ),
            ],
        },
    },
]
