tests/snapshots/fixtures__imdb_movie_info_smoke_sql.snap
---
source: tests/tests/fixtures.rs
expression: contents
---
-- movie_info
select
  COALESCE(
    JSON_AGG(
      JSON_BUILD_OBJECT(
        'id',
        "movie_info_d37aaa02"."id",
        'info',
        "movie_info_d37aaa02"."info",
        'note',
        "movie_info_d37aaa02"."note",
        'title',
        "title_json_85df456e"."title",
        'info_type',
        "info_type_json_3587486e"."info_type"
      )
    ),
    '[]'
  ) as "movie_info"
from
  (
    select
      *
    from
      "public"."movie_info" as "movie_info_d37aaa02"
    where
      "movie_info_d37aaa02"."id" > 0
    order by
      "movie_info_d37aaa02"."id" asc
    limit
      2
  ) as "movie_info_d37aaa02"
  left join LATERAL (
    select
      JSON_BUILD_OBJECT('title', "title_85df456e"."title") as "title"
    from
      "public"."title" as "title_85df456e"
    where
      "title_85df456e"."id" = "movie_info_d37aaa02"."movie_id"
  ) as "title_json_85df456e" on true
  left join LATERAL (
    select
      JSON_BUILD_OBJECT('info', "info_type_3587486e"."info") as "info_type"
    from
      "public"."info_type" as "info_type_3587486e"
    where
      "info_type_3587486e"."id" = "movie_info_d37aaa02"."info_type_id"
  ) as "info_type_json_3587486e" on true
