tests/snapshots/fixtures__imdb_relation_path_selector_format.snap
---
source: tests/tests/fixtures.rs
assertion_line: 185
expression: contents
---
query MovieRelationPathSelector {
  movie_info(where .id == 1811435 limit 1) {
    id
    title {
      aliases: aka_title::movie_id {
        id
      }
      episodes: aka_title::episode_of_id {
        id
      }
    }
  }
}
